# Proyecto-Interciclo-Vision

./: .gitignore  Base64.cpp  Base64.hpp  CMakeLists.txt  Corazon.cpp  Corazon.hpp  DiagramaProyectoInterciclo.drawio  FlaskClient.cpp  FlaskClient.hpp  Huesos.cpp  Huesos.hpp  Interfaz.cpp  Interfaz.hpp  InterfazIntegrada.cpp  InterfazIntegrada.hpp  Operaciones.cpp  Operaciones.hpp  Pulmones.cpp  Pulmones.hpp  README.md  Tipos.hpp  client.py  main.cpp  server.py
output/: metricas.csv
